infra-templates/vpc.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Custom VPC with Public/Private Subnets and Endpoints for ECS Fargate

Parameters:
  AppName:
    Type: String
  LabTag:
    Type: String
  S3BucketName:
    Description: 'Shutter box S3 upload bucket'
    Type: String

Resources:
# VPC
  SBoxVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.120.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-vpc
        - Key: Lab
          Value: !Ref LabTag

# Internet Gateway
  SBoxIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-igw
        - Key: Lab
          Value: !Ref LabTag

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref SBoxVPC
      InternetGatewayId: !Ref SBoxIGW

# Subnets & Associations
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SBoxVPC
      CidrBlock: 10.120.1.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-public-subnet-1
        - Key: Lab
          Value: !Ref LabTag

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SBoxVPC
      CidrBlock: 10.120.2.0/24
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-public-subnet-2
        - Key: Lab
          Value: !Ref LabTag

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SBoxVPC
      CidrBlock: 10.120.3.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-private-subnet-1
        - Key: Lab
          Value: !Ref LabTag

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SBoxVPC
      CidrBlock: 10.120.4.0/24
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-private-subnet-2
        - Key: Lab
          Value: !Ref LabTag

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref SBoxVPC
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-public-rt
        - Key: Lab
          Value: !Ref LabTag

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref SBoxIGW

  PublicSubnet1RouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

# Private Subnets Associations
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref SBoxVPC
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-private-rt-1
        - Key: Lab
          Value: !Ref LabTag

  PrivateSubnet1RouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref SBoxVPC
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-private-rt-2
        - Key: Lab
          Value: !Ref LabTag

  PrivateSubnet2RouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable2

  VPCEndpointSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for VPC Interface Endpoints
      VpcId: !Ref SBoxVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !Ref ECSSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-vpce-sg
        - Key: Lab
          Value: !Ref LabTag

  # ECS Security Group
  ECSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SG to Allow ALB to ECS
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8081
          ToPort: 8081
          SourceSecurityGroupId: !Ref ALBSecurityGroup
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          DestinationSecurityGroupId: !Ref VPCEndpointSG
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-ecs-sg
        - Key: Lab
          Value: !Ref LabTag

  # S3 VPC Gateway Endpoint
  S3Endpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref SBoxVPC
      ServiceName: !Sub "com.amazonaws.${AWS::Region}.s3"
      VpcEndpointType: Gateway
      RouteTableIds:
        - !Ref PrivateRouteTable1
        - !Ref PrivateRouteTable2
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal: "*"
            Action:
              - "s3:GetObject"
              - "s3:PutObject"
              - "s3:DeleteObject"
              - "s3:ListBucket"
            Resource:
              - !Sub "arn:aws:s3:::${S3BucketName}"
              - !Sub "arn:aws:s3:::${S3BucketName}/*"
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-s3-endpoint
        - Key: Lab
          Value: !Ref LabTag

  # Interface Endpoints for ECR, ECR DKR (Docker), CloudWatch Logs
  ECRApiEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref SBoxVPC
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ecr.api
      VpcEndpointType: Interface
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref VPCEndpointSG
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-ecr-api-endpoint
        - Key: Lab
          Value: !Ref LabTag

  ECRDkrEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref SBoxVPC
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ecr.dkr
      VpcEndpointType: Interface
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref VPCEndpointSG
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-ecr-docker-endpoint
        - Key: Lab
          Value: !Ref LabTag

  CWLogsEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref SBoxVPC
      ServiceName: !Sub com.amazonaws.${AWS::Region}.logs
      VpcEndpointType: Interface
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref VPCEndpointSG
      Tags:
        - Key: Name
          Value: !Sub ${AppName}-cw-endpoint
        - Key: Lab
          Value: !Ref LabTag

Outputs:
  VPCId:
    Value: !Ref SBoxVPC
    Export:
      Name: !Sub ${AppName}-vpc

  PublicSubnet1Id: 
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub ${AppName}-public-subnet-1

  PublicSubnet2Id: 
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub ${AppName}-public-subnet-2

  PrivateSubnet1Id: 
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub ${AppName}-private-subnet-1

  PrivateSubnet2Id: 
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub ${AppName}-private-subnet-2
  
  VPCEndpointSecurityGroup:
    Description: 'Security Group ID for VPC endpoints'
    Value: !Ref VPCEndpointSG
    Export:
      Name: !Sub ${AppName}-VPC-Endpoint-SG

  ECSSecurityGroup:
    Description: 'Security Group ID for ECS Tasks'
    Value: !Ref ECSSecurityGroup
    Export:
      Name: !Sub ${AppName}-ECS-SG
